tests/ui/symbol-names/basic.legacy.stderr
error: symbol-name(_ZN5basic4main17h947b7a9ed2b2bf56E)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_dump_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling(basic::main::h947b7a9ed2b2bf56)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_dump_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: demangling-alt(basic::main)
  --> $DIR/basic.rs:8:1
   |
LL | #[rustc_dump_symbol_name]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: def-path(main)
  --> $DIR/basic.rs:15:1
   |
LL | #[rustc_dump_def_path]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

